fix so that main page doesn't get squashed

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -243,7 +243,7 @@ em {
   max-width: 800px;
 }
 
-article {
+body.elements-3 article {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
